# mcp-apps-ra

./: ARCHITECTURE.md  Dockerfile  Makefile  README.md  TODO.md  mcp-app.html  package-lock.json  package.json  pyproject.toml  server.py  tsconfig.json  vite.config.ts
.claude/skills/ra-mcp-apps/: SKILL.md
examples/: example.txt
src/: App.svelte  __init__.py  alto.py  app.d.ts  fetchers.py  global.css  iiif.py  image.py  models.py  parser.py  tools.py
src/components/: DocumentViewer.svelte  EmptyState.svelte  UploadView.svelte
src/lib/: types.ts
tests/: conftest.py  test_parser.py
tests/fixtures/: 30002056_00010.xml  451511_1512_01_alto.xml  451511_1512_01_page.xml
ui/: App.svelte  global.css
ui/components/: CanvasToolbar.svelte  DocumentContainer.svelte  DocumentViewer.svelte  EmptyState.svelte  PolygonStylePopover.svelte  ThumbnailStrip.svelte  TranscriptionPanel.svelte  UploadView.svelte
ui/lib/: alto-parser.ts  annotations.ts  canvas.ts  context.ts  types.ts  utils.ts
