[project]
name = "riksarkivet-viewer"
version = "1.0.0"
description = "Riksarkivet Document Viewer - Interactive ALTO XML visualization"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
riksarkivet-viewer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "dist/**"]

[dependency-groups]
dev = []
