[project]
name = "riksarkivet-viewer"
version = "0.1.0"
description = "Riksarkivet Document Viewer - Interactive ALTO XML visualization"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "fastmcp>=3.0.0rc1",
]

[project.scripts]
riksarkivet-viewer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["server.py", "src/**", "dist/**"]

[dependency-groups]
dev = []
